2007-12-07  Carlo Baldassi  <carlobaldassi@yahoo.it>

	* initial revision.
