@@ -1,3 +1,7 @@
+2008-02-20  Carlo Baldassi  <carlobaldassi@gmail.com>
+
+	* Added rigidity mask
+
 2007-12-07  Carlo Baldassi  <carlobaldassi@yahoo.it>
 
 	* initial revision.
